<resources>
    <string name="app_name">HatcheryApp</string>
    <string name="title_storage">Store</string>
    <string name="title_hatchibator">Hatchibator</string>
    <string name="title_collections">Collections</string>
    <string name="title_statistics">Statistics</string>

    <string name="violated_egg_terms">Sorry! When you turned away for a second, tiny little raccoon stole your egg. But don`t worry! We found out when it happened and got it back. It`s in your vault.</string>
    <string name="usage_permission_ask">In order to insure Hatchery runs properly, please allow us to track what other apps you\'re using.</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="go_to_settings">Settings</string>
    <string name="abort_egg">Abort</string>
    <string name="start_egg">Start</string>
    <string name="start_new_egg">Ksss-kss!</string>
    <string name="give_up_egg">Give up</string>
    <string name="set_up_hatchibator">Set up hatchibator</string>
    <string name="choose_time_stump">Choose time interval:</string>
    <string name="ooops">Oooops!</string>

    <string-array name="time_intervals">
        <item>1 minute</item>
        <item>20 minutes</item>
        <item>1 hour</item>
        <item>2 hours</item>
        <item>4 hours</item>
    </string-array>


</resources>
