<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/inspiringTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/eggImageView"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="64dp"
        android:background="@drawable/button_background"
        android:fontFamily="sans-serif-light"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/black"
        android:textSize="16sp"
        tools:text="Не сдавайся!" />


    <ImageView
        android:id="@+id/eggImageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerInParent="true"
        tools:src="@drawable/egg" />

    <TextView
        android:id="@+id/timerTextView"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/eggImageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_background"
        android:fontFamily="sans-serif-light"
        android:text="TextView"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        android:textSize="36sp"
        tools:text="34:00" />

    <Button
        android:id="@+id/restartButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/eggImageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_stroke_background"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:text="@string/start_new_egg"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/black"
        android:visibility="gone" />

    <Button
        android:id="@+id/abortButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/timerTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_stroke_background"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:text="@string/abort_egg"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/black"
        android:visibility="visible" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/timerTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_stroke_background"
        android:fontFamily="sans-serif-light"
        android:text="@string/start_egg"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/hatching_effects_imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/hatching_animation"
        android:visibility="gone" />
</RelativeLayout>